# telearia2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.action  README.md  config_example.toml  config_example_multi_aria2.toml  docker-compose.yml  flake.nix
.github/workflows/: build-release.yml  ci.yml
src/: aria2.rs  config.rs  constants.rs  format.rs  handlers.rs  main.rs  state.rs  utils.rs
